--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,6 @@ PORT=3000
 # MariaDB Database
 DB_HOST=localhost
 DB_PORT=3306
-DB_NAME=your_database
-DB_USER=your_username
-DB_PASSWORD=your_password
+DB_NAME=yt_dl
+DB_USER=appuser
+DB_PASSWORD=apppassword
